tests/fixtures/invalid/divmod_none_str.py
# Cannot call divmod() with None, Str
x = divmod(None, "hello")
